<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favourite"
            android:icon="@drawable/ic_favorite_24dp"
            android:title="@string/nav_favourites" />
        <item
            android:id="@+id/nav_clear"
            android:icon="@drawable/ic_clear_24dp"
            android:title="@string/nav_erase" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/nav_tools" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_info_24dp"
            android:title="@string/nav_about" />
    </group>

    <item android:title="@string/nav_communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
            <item
                android:id="@+id/nav_donate"
                android:icon="@drawable/ic_shopping_basket_black_24dp"
                android:title="Donate" />
        </menu>
    </item>

</menu>
